# cs980-ROS-bot

ROS_ws/src/: bashrc
ROS_ws/src/arm/: package.xml
ROS_ws/src/brain/: CMakeLists.txt  package.xml
ROS_ws/src/brain/scripts/: arm-stub.py  eyes-stub.py  planner.py  task_manager.py
ROS_ws/src/brain/srv/: GripLoc.srv  Move.srv  TableSetup.srv
ROS_ws/src/eyes/: CMakeLists.txt  package.xml
ROS_ws/src/eyes/001_talker_listener/: listener.py  talker_listener.launch
ROS_ws/src/eyes/cmake/: rospy_tutorialsConfig.cmake
ROS_ws/src/eyes/launch/: calibration.launch  kinect_rec.launch  openni2.launch  track_kinect.launch
ROS_ws/src/visptest/: board.xml  kinect_rec.launch  kinect_rec_bundle.launch  track_bundle_kinect.launch  track_usb.launch  train.launch  usb_rec.launch
ROS_ws/src/visptest/alvar/opencv-2.4.0-linux64-gcc44/lib/pkgconfig/: opencv.pc
ROS_ws/src/visptest/alvar/opencv-2.4.0-linux64-gcc44/share/OpenCV/: OpenCVConfig.cmake
ROS_ws/src/visptest/cam/: calibration.ini
